Fix major bugs on how the dependency files is updated